--- a/html e css/prontocloud/index.html
+++ b/html e css/prontocloud/index.html
@@ -99,8 +99,7 @@
                     <p>Então preencha os campos abaixo para receber mais informações sobre nossos produtos e serviços</p>
 
                     <div class="cognito">
-                        <script src="https://www.cognitoforms.com/s/pnEzo69DJ02ilLkJFaThlw"></script>
-                        <script>Cognito.load("forms", { id: "1" });</script>
+                        <script src="https://www.cognitoforms.com/f/seamless.js" data-key="ulU0ksziY060nn36JqB_Fg" data-form="1"></script>
                     </div>
 
                 </article>
@@ -109,7 +108,7 @@
         <footer>
             <div class="container">
                 <p>&copy; ProntoCloud. Todos os direitos reservados.
-            <small>Desenvolvido por: Marcelo Cavalcante</small></p>
+            <small>Desenvolvido por: Rodrigo Pinto</small></p>
             </div>
         </footer>
     </div>
