--- a/html e css/10-layouts-web.html
+++ b/html e css/10-layouts-web.html
@@ -56,6 +56,11 @@
 				<div class="coluna coluna-100w">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.7637970414344!2d-46.65501878521573!3d-23.540996466725186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce57bc513b0395%3A0xf8caecd88e8edbad!2sEBAC!5e0!3m2!1spt-BR!2sbr!4v1624359793955!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
+				<div class="coluna">
+					<!-- Cria moldura para carregar uma página dentro de outra -->
+					<iframe src="02-listas-e-links.html" width="100%" height="400px" name="meu_iframe"></iframe>
+				</div>
+
 			</article>
 		</section>
 		<footer>
