--- a/bootstrap/projeto/index.html
+++ b/bootstrap/projeto/index.html
@@ -7,7 +7,12 @@
     <!-- CSS only Bootstrap -->
     <link href="./libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/custom.css">
-    <title>Document</title>
+
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <title>Buy Teppanyaki</title>
 </head>
 <body>
     <header>
@@ -28,6 +33,51 @@
             </div>
         </div>
     </header>
+    <section id="slide">
+        
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="ratio ratio-21x9">
+                            <img src="images/slider.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-caption">
+                            <h4>Bem-vindos ao BYU</h4>
+                            <a class="btn btn-danger stretched-link">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="ratio ratio-21x9">
+                            <img src="images/slider-1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-caption">
+                            <h4 class="text-truncate col-12 ">Venha desfrutar de momentos memoráveis com sua família e amigos nesse lugar acolhedor com a melhor comida da cidade, consectetur adipisicing elit. Dolore velit, magni, architecto eius libero tempore repellendus, unde temporibus delectus non saepe. Dolores et ex blanditiis architecto facilis maxime, veritatis assumenda?</h4>
+                            <a class="btn btn-danger stretched-link" href="#">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="ratio ratio-21x9">
+                            <img src="images/slider-2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-caption">
+                            <h4>Faça agora sua reserva</h4>
+                            <a class="btn btn-danger stretched-link" href="#">Reservas</a>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        
+    </section>
     <section id="sobre">
         <div class="container">
             <div class="row">
