--- a/bootstrap/projeto/cadastro.html
+++ b/bootstrap/projeto/cadastro.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/custom.css">
     <link rel="stylesheet" href="./style/custom-form.css">
     <title>Cadastro</title>
@@ -43,30 +43,40 @@
                 <div class="row">
                     <div class="col">
                         <div class="input-group">
-                            <input class="form-control" type="text" name="nome" placeholder="Digite seu nome">
+                            <input class="form-control" type="text" name="nome" placeholder="Digite seu nome" required>
                         </div>
                     </div>    
                     <div class="col">    
                         <div class="input-group">
-                            <input class="form-control" type="email" name="email" placeholder="Digite seu email">
+                            <input class="form-control" type="email" name="email" placeholder="Digite seu email" required>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <label for="endereco" class="col-form-label col-form-label-sm">Endereço completo</label>
-                        <input type="text" class="form-control" id="endereco" placeholder="Endereço completo">
+                        <input type="text" class="form-control" id="endereco" placeholder="Endereço completo" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="complemento" class="col-form-label col-form-label-sm ">Complemento do endereço</label>
+                        <input type="text" class="form-control" name="complemento"  placeholder="Complemento" id="complemento" required>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col">
                         <label for="cidade">Cidade</label>
-                        <input type="text" name="cidade" id="cidade" class="form-control">
+                        <input type="text" name="cidade" id="cidade" class="form-control" required>
+                    </div>
+                    <div class="col">
+                        <label for="bairro">Bairro</label>
+                        <input type="text" name="bairro" id="bairro" class="form-control" required>
                     </div>
                     <div class="col">
                         <label for="estado">Estado</label>
-                        <select name="estado" id="estado" class="form-control">
+                        <select name="estado" id="estado" class="form-control" required>
                             <option value="">Selecione um estado</option>
                             <option value="sp">SP</option>
                             <option value="al">AL</option>
@@ -74,16 +84,17 @@
                         </select>
                     </div>
                     <div class="col">
-                        <label for="cep" class="col-form-label col-form-label-sm">CEP</label>
-                        <input type="text" name="cep" id="cep" class="form-control">
+                        <label for="cep">Cep</label>
+                        <input type="text" name="cep" id="cep" class="form-control" required>
                     </div>
+                    
                 </div>
 
                 <div class="row">
                     <div class="col">
                         <div class="input-group">
                             <label for="info" class="col-form-label col-form-label-sm">Informações</label>
-                            <textarea  class="form-control" name="informacoes" id="info" rows="5"></textarea>
+                            <textarea  class="form-control" name="informacoes" id="info" rows="5" required></textarea>
                         </div>
                     </div>
                 </div>
@@ -91,7 +102,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="form-check">
-                            <input type="checkbox" name="promocionais" id="promocionais">
+                            <input type="checkbox" name="promocionais" id="promocionais" required>
                             <label for="promocionais" class="form-check-label">Aceito receber mensagens promocionais</label>
                         </div>
 
@@ -100,8 +111,7 @@
 
                 <button type="submit" class="btn btn-lg btn-success btn-danger">Realizar cadastro</button>
             </form>
-            
-            <p><a href="#cadastro" data-bs-toggle="modal" data-bs-target="#modal-1">Cadastre-se</a>para receber novidades</p>
+            <p><a href="#cadastro" data-bs-toggle="modal" data-bs-target="#modal-1">Cadastre-se</a> para receber novidades</p>
         </div>
     </section>
     <div class="modal fade" id="modal-1">
@@ -116,7 +126,7 @@
                     <form class="form-inline">
                         <div class="row">
                             <div class="form-group col-4">
-                                <input type="text" class="form-control form-control-sm mb-2" name="nome" placeholder="nome">
+                                <input type="text" class="form-control form-control-sm mb-2" name="nome" placeholder="nome" required>
                             </div>
                             <div class="form-group col-4">
                                 <input type="text" class="form-control form-control-sm mb-2" name="e-mail" placeholder="e-mail" required><!-- requer validação -->
