Revisão do módulo

--- a/bootstrap/projeto/componentes.html
+++ b/bootstrap/projeto/componentes.html
@@ -9,10 +9,12 @@
     <link href="./libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/custom.css">
     <link rel="stylesheet" href="./style/custom-form.css">
-    <!-- fontawesome-->
+    <!-- fontawesome
+    <link rel="stylesheet" href="libs/fontawesome/css/all.css">
+
     <link rel="stylesheet" href="./libs/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="./libs/fontawesome/css/brands.min.css">
-    <link rel="stylesheet" href="./libs/fontawesome/css/regular.min.css">
+    <link rel="stylesheet" href="./libs/fontawesome/css/regular.min.css">-->
 
 
     <title>Cadastro</title>
@@ -76,6 +78,7 @@
             </button>
         </div>
     </div>
+
     <div class="container">
         <div class="bg-dark clearfix bg-gradient">
             <a name="" id="" class="btn btn-link link-danger float-start" href="#" role="button">Link</a>
@@ -86,6 +89,15 @@
         </div>
         
     </div>  
+    
+    <div class="container">
+        <div class="bg-info clearfix">
+            <button type="button" class="btn btn-secondary float-start">Example Button floated left</button>
+            <button type="button" class="btn btn-secondary float-end">Example Button floated right</button>
+        </div>
+    </div>
+
+
     <div class="container">
         <i class="fa fa-wifi" aria-hidden="true"></i>
         <i class="fa fa-facebook-official link-primary" aria-hidden="true"></i>
