--- a/bootstrap/projeto/cadastro.html
+++ b/bootstrap/projeto/cadastro.html
@@ -1,82 +1,76 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only Bootstrap -->
     <link href="./libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/custom.css">
     <link rel="stylesheet" href="./style/custom-form.css">
     <title>Cadastro</title>
 </head>
+
 <body>
+
     <header>
         <div class="container">
             <div class="row">
-                <div class="col col-md-6 col-sm-12 logo">
-                    <img src="images/logo-restaurante-japones-white.png" alt="Imagem de Tecnologia" class="img-fluid">
+                <div class="col">
+                    <h1>Logo</h1>
                 </div>
-                <div class="col col-md-6 col-sm-12 logo">
+                <div class="col">
                     <ul class="nav justify-content-end">
-                        <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="./index.html" class="nav-link">Sobre</a></li>
-                        <li class="nav-item"><a href="./index.html" class="nav-link">Pratos</a></li>
-                        <li class="nav-item"><a href="./index.html" class="nav-link">Sobremesas</a></li>
-                        <li class="nav-item"><a href="./index.html" class="nav-link">Contato</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./index.html#sobre">Sobre</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./index.html#produtos">Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./index.html#contatos">Contato</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </header>
+
     <section id="cadastro">
         <div class="container">
+
             <div class="row">
-                
                 <div class="col-md-12 col-sm-12">
                     <h2>Cadastro</h2>
-                    <p>Ficou interessado? Preencha os campos do cadastro para efetuar uma reserva.</p>
+                    <p>Faça seu cadastro para receber nossos produtos em sua casa</p>
                 </div>
             </div>
 
             <form class="form">
+
                 <div class="row">
                     <div class="col">
                         <div class="input-group">
-                            <input class="form-control" type="text" name="nome" placeholder="Digite seu nome" required>
+                            <input class="form-control" type="text" name="nome" placeholder="digite seu nome">
                         </div>
-                    </div>    
-                    <div class="col">    
+                    </div>
+                    <div class="col">
                         <div class="input-group">
-                            <input class="form-control" type="email" name="email" placeholder="Digite seu email" required>
+                            <input class="form-control" type="text" name="email" placeholder="digite seu email">
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <label for="endereco" class="col-form-label col-form-label-sm">Endereço completo</label>
-                        <input type="text" class="form-control" id="endereco" placeholder="Endereço completo" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <label for="complemento" class="col-form-label col-form-label-sm ">Complemento do endereço</label>
-                        <input type="text" class="form-control" name="complemento"  placeholder="Complemento" id="complemento" required>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col">
-                        <label for="cidade">Cidade</label>
-                        <input type="text" name="cidade" id="cidade" class="form-control" required>
+                        <label for="endereco" class="col-form-label col-form-label-sm">Endereço completo</label>
+                        <input type="text" id="endereco" class="form-control" placeholder="Endereço completo">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col">
+                        <label for="cidade" class="col-form-label col-form-label-sm">Cidade</label>
+                        <input type="text" name="cidade" id="cidade" class="form-control">
                     </div>
                     <div class="col">
-                        <label for="bairro">Bairro</label>
-                        <input type="text" name="bairro" id="bairro" class="form-control" required>
-                    </div>
-                    <div class="col">
-                        <label for="estado">Estado</label>
-                        <select name="estado" id="estado" class="form-control" required>
+                        <label for="estado" class="col-form-label col-form-label-sm">Estado</label>
+                        <select name="estado" id="estado" class="form-control">
                             <option value="">Selecione um estado</option>
                             <option value="sp">SP</option>
                             <option value="al">AL</option>
@@ -84,17 +78,17 @@
                         </select>
                     </div>
                     <div class="col">
-                        <label for="cep">Cep</label>
-                        <input type="text" name="cep" id="cep" class="form-control" required>
+                        <label for="cep" class="col-form-label col-form-label-sm">CEP</label>
+                        <input type="text" name="cep" id="cep" class="form-control">
                     </div>
-                    
                 </div>
+
 
                 <div class="row">
                     <div class="col">
                         <div class="input-group">
                             <label for="info" class="col-form-label col-form-label-sm">Informações</label>
-                            <textarea  class="form-control" name="informacoes" id="info" rows="5" required></textarea>
+                            <textarea class="form-control" name="informacoes" id="info" rows="5"></textarea>
                         </div>
                     </div>
                 </div>
@@ -102,49 +96,62 @@
                 <div class="row">
                     <div class="col">
                         <div class="form-check">
-                            <input type="checkbox" name="promocionais" id="promocionais" required>
-                            <label for="promocionais" class="form-check-label">Aceito receber mensagens promocionais</label>
+                            <input type="checkbox" name="promocionais" id="promocionais">
+                            <label for="promocionais" class="form-check-label col-form-label-sm">Aceito receber
+                                mensagens promocionais</label>
                         </div>
-
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-lg btn-success btn-danger">Realizar cadastro</button>
+                <button type="submit" class="btn btn-lg btn-success">Realizar cadastro</button>
+
             </form>
-            <p><a href="#cadastro" data-bs-toggle="modal" data-bs-target="#modal-1">Cadastre-se</a> para receber novidades</p>
-        </div>
+
+            <p> <a href="#cadastro" data-bs-toggle="modal" data-bs-target="#modal-1">Cadastre-se</a> para receber
+                novidades.</p>
+
+        </div> <!-- end .container -->
     </section>
+
+
+
+
     <div class="modal fade" id="modal-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">Inscrever-me na lista</h5>
-                    <button class="btn-close" data-bs-dismiss="modal" arial-label="Fechar" ></button>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <h6>Preencha os campos para receber novidades e promoções</h6>
+
                     <form class="form-inline">
                         <div class="row">
                             <div class="form-group col-4">
-                                <input type="text" class="form-control form-control-sm mb-2" name="nome" placeholder="nome" required>
+                                <input type="text" class="form-control form-control-sm mb-2" name="nome"
+                                    placeholder="nome" required>
                             </div>
                             <div class="form-group col-4">
-                                <input type="text" class="form-control form-control-sm mb-2" name="e-mail" placeholder="e-mail" required><!-- requer validação -->
+                                <input type="text" class="form-control form-control-sm mb-2" name="e-mail"
+                                    placeholder="e-mail" required>
                             </div>
                             <div class="form-group col-4">
-                                <button type="submit" class="btn btn-sm btn-success btn-danger">Receber novidades</button>
+                                <button type="submit" class="btn btn-sm btn-success">receber novidades</button>
                             </div>
                         </div>
                     </form>
+
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary mb-2" data-bs-dismiss="modal">Fechar</button>
                 </div>
             </div>
         </div>
+
     </div>
 
-    <!-- JavaScript Bundle with Popper bootstrap -->
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
